--- a/Worktime/packages.config
+++ b/Worktime/packages.config
@@ -1,23 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net461" />
-  <package id="Costura.Fody" version="3.1.0" targetFramework="net461" />
+  <package id="Costura.Fody" version="3.1.2" targetFramework="net461" />
   <package id="Dapper" version="1.50.5" targetFramework="net461" />
   <package id="Dapper.FluentColumnMapping" version="1.1.0" targetFramework="net461" />
   <package id="DeltaCompressionDotNet" version="1.1.0" targetFramework="net461" />
   <package id="Extended.Wpf.Toolkit" version="3.4.0" targetFramework="net461" />
-  <package id="Fody" version="3.1.3" targetFramework="net461" developmentDependency="true" />
+  <package id="Fody" version="3.2.4" targetFramework="net461" developmentDependency="true" />
   <package id="MahApps.Metro" version="1.6.5" targetFramework="net461" />
   <package id="MahApps.Metro.Resources" version="0.6.1.0" targetFramework="net461" />
-  <package id="Mono.Cecil" version="0.9.6.1" targetFramework="net461" />
+  <package id="Mono.Cecil" version="0.10.0" targetFramework="net461" />
   <package id="MunkiWinchester.WpfUtility" version="0.9.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
-  <package id="NLog" version="4.5.6" targetFramework="net461" />
+  <package id="NLog" version="4.5.10" targetFramework="net461" />
+  <package id="NLog.Config" version="4.5.10" targetFramework="net461" />
+  <package id="NLog.Schema" version="4.5.10" targetFramework="net461" />
   <package id="NuGet.CommandLine" version="4.7.1" targetFramework="net461" developmentDependency="true" />
   <package id="PublicHoliday" version="2.0.2" targetFramework="net461" />
-  <package id="SharpCompress" version="0.17.1" targetFramework="net461" />
-  <package id="Splat" version="1.6.2" targetFramework="net461" />
-  <package id="squirrel.windows" version="1.8.0" targetFramework="net461" />
+  <package id="SharpCompress" version="0.22.0" targetFramework="net461" />
+  <package id="Splat" version="5.0.2" targetFramework="net461" />
+  <package id="squirrel.windows" version="1.9.0" targetFramework="net461" />
+  <package id="System.Drawing.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
-  <package id="XAMLMarkupExtensions" version="1.3.0" targetFramework="net461" />
+  <package id="XAMLMarkupExtensions" version="1.4.0" targetFramework="net461" />
 </packages>
