--- a/Worktime/packages.config
+++ b/Worktime/packages.config
@@ -5,6 +5,7 @@
   <package id="Dapper.FluentColumnMapping" version="1.1.0" targetFramework="net461" />
   <package id="DeltaCompressionDotNet" version="1.1.0" targetFramework="net461" />
   <package id="Extended.Wpf.Toolkit" version="3.4.0" targetFramework="net461" />
+  <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net461" />
   <package id="MahApps.Metro" version="1.6.5" targetFramework="net461" />
   <package id="MahApps.Metro.Resources" version="0.6.1.0" targetFramework="net461" />
   <package id="Mono.Cecil" version="0.10.0" targetFramework="net461" />
