--- a/Worktime/Worktime.csproj
+++ b/Worktime/Worktime.csproj
@@ -143,7 +143,7 @@
     <Compile Include="Extension\DateTimeExtension.cs" />
     <Compile Include="Business\EmployeeManager.cs" />
     <Compile Include="Business\Converters.cs" />
-    <Compile Include="Business\UiTheme.cs" />
+    <Compile Include="Business\UiStyleManager.cs" />
     <Compile Include="DataObjetcs\Employee.cs" />
     <Compile Include="Business\Helpers.cs" />
     <Compile Include="DataObjetcs\IsoWeek.cs" />
